--- a/index.html
+++ b/index.html
@@ -4,38 +4,16 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>DIO - TMDB</title>
+		<link rel="stylesheet" href="index.css" />
 	</head>
 	<body>
-		<div style="display: flex; flex-direction: column; gap: 1rem">
-			<div
-				style="
-					display: flex;
-					width: 300px;
-					height: 100px;
-					justify-content: space-between;
-					flex-direction: column;
-				"
-			>
-				<input
-					id="login"
-					placeholder="Login"
-					onchange="preencherLogin(event)"
-				/>
-				<input
-					id="senha"
-					placeholder="Senha"
-					type="password"
-					onchange="preencherSenha(event)"
-				/>
-				<input id="api-key" placeholder="Api Key" onchange="preencherApi()" />
-				<button id="login-button" disabled>Login</button>
-			</div>
-			<div id="search-container" style="margin-left: 20px">
-				<input id="search" placeholder="Escreva..." />
-				<button id="search-button">Pesquisar Filme</button>
-			</div>
-			<div id="lista"></div>
+		<div class="wrapper-login">
+			<h2>Login</h2>
+			<input id="login" placeholder="Login" />
+			<input id="senha" placeholder="Senha" type="password" />
+			<input id="api-key" placeholder="Api Key" />
+			<button id="login-button">Login</button>
 		</div>
 		<script src="dist/respostas/desafio4.js" defer></script>
 	</body>
