Organizando paginas do projeto

--- a/list.html
+++ b/list.html
@@ -4,17 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>The Movie Database - Search Movie</title>
-		<link rel="stylesheet" href="src/pages/search.css" />
+		<title>DIO - TMDB - List</title>
+		<link rel="stylesheet" href="src/pages/list.css" />
 	</head>
 	<body>
 		<script src="src/components/menu.js"></script>
-		<div class="">
-			<h3>The Movie Database - Buscar filme</h3>
-			<input id="movie-title" placeholder="digite o nome do filme aqui" />
-			<button id="search">buscar</button>
-			<div class="list-container"></div>
-		</div>
 		<script type="module" src="dist/main.js"></script>
 	</body>
 </html>
