--- a/dashboard.html
+++ b/dashboard.html
@@ -26,6 +26,6 @@
 				<div id="lista"></div>
 			</div>
 		</div>
-		<script src="dist/respostas/desafio4.js" defer></script>
+		<script src="dist/respostas/desafio4.js" type="module" defer></script>
 	</body>
 </html>
