--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>DIO - TMDB</title>
-		<link rel="stylesheet" href="index.css" />
+		<title>DIO - TMDB - Home</title>
+		<link rel="stylesheet" href="src/pages/index.css" />
 	</head>
 	<body>
 		<div class="wrapper-login">
@@ -15,6 +15,6 @@
 			<input id="api-key" placeholder="Api Key" />
 			<button id="login-button">Login</button>
 		</div>
-		<script src="dist/respostas/desafio4.js" defer></script>
+		<script type="module" src="dist/main.js"></script>
 	</body>
 </html>
